--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@tanstack/react-query": "^5.90.21",
+    "dotenv": "^17.3.1",
+    "husky": "^9.1.7",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
