--- a/biome.json
+++ b/biome.json
@@ -34,7 +34,7 @@
   "assist": {
     "actions": {
       "source": {
-        "organizeImports": "on"
+        "organizeImports": "off"
       }
     }
   }
